progress up to 28/07/25

--- a/html_css_brocode/basicos/letra.html
+++ b/html_css_brocode/basicos/letra.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div align="center">
-    <script src="/javascripts/tocar.js"></script>
+    <script src="/scripts/tocar.js"></script>
     <audio id="godhand!">
         <source src="/audios/godhand.mp3" type="audio/mp3">
     </audio>
