--- a/html_css_brocode/basicos/style1/botoes.html
+++ b/html_css_brocode/basicos/style1/botoes.html
@@ -16,7 +16,7 @@
     <button style="border-radius: 15px; background-color: rgb(88, 88, 88);">Redirecionando!</button>
     </a>
     <button onclick="faztroca()" style="border-radius: 25%;">Botão de JavaScript!</button>
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
     <button align="center">Botão alinhado centro!</button>
     <br>
     <br>
